[tool.poetry]
name = "bayses"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"


[tool.poetry.group.mypy.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39', 'py310']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
