[tool.poetry]
name = "bayses"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
polars = "^1.9.0"
scikit-learn = "^1.5.2"
seaborn = "^0.13.2"
pyarrow = "^17.0.0"
pgmpy = "^0.1.26"
fastexcel = "^0.11.6"
plotly = "^5.24.1"
pygraphviz = "^1.14"
nbformat = "^5.10.4"
xlsxwriter = "^3.2.0"


[tool.poetry.group.mypy.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39', 'py310']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
